# lda-over-time

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  dev.rst  index.rst  lda_over_time.models.rst  lda_over_time.rst  modules.rst
lda_over_time/: __about__.py  __init__.py  lda_over_time.py
lda_over_time/errors/: not_implemented.py
lda_over_time/models/: dtm_model_interface.py  lda_seq_model.py  prevalence_model.py  temporal_lda_model.py
notebooks/: tutorial.ipynb
tests/: __init__.py  ldaseq.py  prevalence.py
