[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lda-over-time"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "LGPL-3.0-only"
keywords = []
authors = [
  { name = "Willian Ozako", email = "willian.ozako@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "cycler==0.11.0",
  "fonttools==4.38.0",
  "funcy==1.17",
  "future==0.18.2",
  "gensim==4.2.0",
  "Jinja2==3.1.2",
  "joblib==1.2.0",
  "kiwisolver==1.4.4",
  "MarkupSafe==2.1.1",
  "matplotlib==3.5.3",
  "numexpr==2.8.4",
  "numpy==1.21.6",
  "packaging==21.3",
  "pandas==1.3.5",
  "Pillow==9.3.0",
  "pyLDAvis==3.3.1",
  "pyparsing==3.0.9",
  "python-dateutil==2.8.2",
  "pytz==2022.6",
  "scikit-learn==1.0.2",
  "scipy==1.7.3",
  "seaborn==0.12.1",
  "six==1.16.0",
  "sklearn==0.0",
  "smart-open==6.2.0",
  "threadpoolctl==3.1.0",
  "typing_extensions==4.4.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/lda-over-time/lda-over-time#readme"
Issues = "https://github.com/lda-over-time/lda-over-time/issues"
Source = "https://github.com/lda-over-time/lda-over-time"

[tool.hatch.version]
path = "lda_over_time/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [
  "lda_over_time.lda_over_time",
  "lda_over_time.models.dtm_lda_seq_model",
  "lda_over_time.models.lda_over_time_prevalence"
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx_rtd_theme"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=lda_over_time --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "lda_over_time/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
