[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lda-over-time"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "LGPL-3.0-only"
keywords = []
authors = [
  { name = "Willian Ozako", email = "willian.ozako@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Visualization",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "gensim",
  "pyLDAvis",
  "seaborn",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/lda-over-time/lda-over-time#readme"
Issues = "https://github.com/lda-over-time/lda-over-time/issues"
Source = "https://github.com/lda-over-time/lda-over-time"

[tool.hatch.version]
path = "lda_over_time/__about__.py"

[tool.hatch.build.targets.wheel]
packages = [
  "lda_over_time",
  "lda_over_time.models",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "sphinx",
  "sphinx_rtd_theme"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=lda_over_time --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "lda_over_time/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
